--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
@@ -27,7 +27,7 @@
         <CardBody>
             <Row Gutter="(10, 10)">
                 <Column ColumnSize="ColumnSize.Is12">
-                    <TextEdit Placeholder="Search" @bind-Text="OrderFilters.Filter"></TextEdit>
+                    <TextEdit Class="search-bar" Placeholder="Search" @bind-Text="OrderFilters.Filter"></TextEdit>
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12.Is2.OnFullHD">
                     <FieldLabel>@L["From"]</FieldLabel>
