Commit For PK-185

--- a/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/AddOnProduct.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/AddOnProduct.razor
@@ -14,7 +14,7 @@
             <h3 class="text-dark">@L["AddOnProducts"]</h3>
         </Column>
         <Column ColumnSize="ColumnSize.Is6" TextAlignment="TextAlignment.End">
-            <Button Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary" >
+            <Button Clicked="CreateNewAddOnProduct" Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary">
                 <Icon Name="IconName.Add"></Icon>
                 @L["New"]
             </Button>
