--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -26,7 +26,7 @@
                 <Divider Class="my-2"></Divider>
                 <Div Class="px-3">
                     <h6 class="m-0">@L["Birthday"]</h6>
-                    <Span>@Member.Birthday?.ToString("yyyy/MM/dd")</Span>
+                    <Span>@Member?.Birthday?.ToString("yyyy/MM/dd")</Span>
                 </Div>
                 <Divider Class="my-2"></Divider>
                 <Div Class="px-3">
@@ -52,13 +52,13 @@
                 <h4>@L["Payment"]</h4>
                 <Row Class="py-3" HorizontalGutter="10">
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="OrderStats.PaidAmount" Count="OrderStats.PaidCount"></PikachuCard>
+                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="OrderStats?.PaidAmount" Count="OrderStats?.PaidCount"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="OrderStats.UnpaidAmount" Count="OrderStats.UnpaidCount"></PikachuCard>
+                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="OrderStats?.UnpaidAmount" Count="OrderStats?.UnpaidCount"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="OrderStats.RefundAmount" Count="OrderStats.RefundCount"></PikachuCard>
+                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="OrderStats?.RefundAmount" Count="OrderStats?.RefundCount"></PikachuCard>
                     </Column>
                 </Row>
             </CardBody>
@@ -98,7 +98,9 @@
 
     public MemberDetailsTab()
     {
+        Member = new();
         OrderStats = new();
+        DefaultAddress = new();
     }
 
     protected async override Task OnAfterRenderAsync(bool firstLoad)
