#PK-299 server error debugging

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -109,6 +109,7 @@
         {
             try
             {
+                if (Member is null) return;
                 DefaultAddress = await MemberAppService.GetDefaultAddressAsync(Member.Id);
                 await InvokeAsync(StateHasChanged);
             }
