--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsHeader.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsHeader.razor
@@ -4,7 +4,7 @@
 
 <Card>
     <CardBody>
-        @if (Member != null)
+        @if (Member != null && Member.Id != Guid.Empty)
         {
             <Div Class="text-dark d-flex align-items-center justify-content-between">
                 <Div>
