--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -8,45 +8,48 @@
 
 <Row>
     <Column ColumnSize="ColumnSize.Is4">
-        <Card>
-            <CardBody Class="px-0">
-                <h4 class="px-3">@L["BasicDetails"]</h4>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["LoginMethod"]</h6>
-                    <Span>Account and password</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["Email"]</h6>
-                    <Span>@Member?.Email</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["Phone"]</h6>
-                    <Span>@Member?.PhoneNumber</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["Birthday"]</h6>
-                    <Span>@Member?.Birthday?.ToString("yyyy/MM/dd")</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["PostalCode"]</h6>
-                    <Span>@(DefaultAddress?.PostalCode ?? "N/A")</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["City"]</h6>
-                    <Span>@(DefaultAddress?.City ?? "N/A")</Span>
-                </Div>
-                <Divider Class="my-2"></Divider>
-                <Div Class="px-3">
-                    <h6 class="m-0">@L["Address"]</h6>
-                    <Span>@(DefaultAddress?.Address ?? "N/A")</Span>
-                </Div>
-            </CardBody>
-        </Card>
+        @if (Member != null)
+        {
+            <Card>
+                <CardBody Class="px-0">
+                    <h4 class="px-3">@L["BasicDetails"]</h4>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["LoginMethod"]</h6>
+                        <Span>Account and password</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["Email"]</h6>
+                        <Span>@Member?.Email</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["Phone"]</h6>
+                        <Span>@Member?.PhoneNumber</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["Birthday"]</h6>
+                        <Span>@Member?.Birthday?.ToString("yyyy/MM/dd")</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["PostalCode"]</h6>
+                        <Span>@(DefaultAddress?.PostalCode ?? "N/A")</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["City"]</h6>
+                        <Span>@(DefaultAddress?.City ?? "N/A")</Span>
+                    </Div>
+                    <Divider Class="my-2"></Divider>
+                    <Div Class="px-3">
+                        <h6 class="m-0">@L["Address"]</h6>
+                        <Span>@(DefaultAddress?.Address ?? "N/A")</Span>
+                    </Div>
+                </CardBody>
+            </Card>
+        }
     </Column>
     <Column ColumnSize="ColumnSize.Is8">
         <Card>
@@ -80,83 +83,3 @@
         }
     </Column>
 </Row>
-
-@code {
-    [Parameter]
-    public MemberDto? Member { get; set; }
-
-    [Parameter]
-    public EventCallback<MemberDto> OnDelete { get; set; }
-
-    [Parameter]
-    public bool CanDeleteMember { get; set; }
-
-    [Parameter]
-    public MemberOrderStatsDto? OrderStats { get; set; }
-
-    bool IsDeleting = false;
-
-    private UserAddressDto? DefaultAddress { get; set; }
-
-    public MemberDetailsTab()
-    {
-        Member = new();
-        OrderStats = new();
-        DefaultAddress = new();
-    }
-
-    protected async override Task OnAfterRenderAsync(bool firstLoad)
-    {
-        if (firstLoad)
-        {
-            try
-            {
-                if (Member == null)
-                {
-                    Logger.Log(LogLevel.Debug, "Member is null in OnAfterRenderAsync");
-                    return;
-                }
-
-                DefaultAddress = await MemberAppService.GetDefaultAddressAsync(Member.Id);
-
-                if (DefaultAddress == null)
-                {
-                    Logger.Log(LogLevel.Debug, "DefaultAddress is null after API call");
-                }
-
-                StateHasChanged();
-            }
-            catch (Exception ex)
-            {
-                await HandleErrorAsync(ex);
-            }
-        }
-        await base.OnAfterRenderAsync(firstLoad);
-    }
-
-    private async Task DeleteAsync()
-    {
-        try
-        {
-            if (!CanDeleteMember) return;
-
-            var confirmation = await Message.Confirm(L["AreYouSureToDeleteThisMember"]);
-            if (confirmation)
-            {
-                IsDeleting = true;
-                StateHasChanged();
-                await MemberAppService.DeleteAsync(Member.Id);
-                await OnDelete.InvokeAsync(Member);
-            }
-        }
-        catch (Exception ex)
-        {
-            await HandleErrorAsync(ex);
-        }
-        finally
-        {
-            IsDeleting = false;
-            StateHasChanged();
-        }
-    }
-}
