#229 Server error debugging

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -22,7 +22,7 @@
             </Items>
             <Content>
                 <TabPanel Name="Details">
-                    <MemberDetailsTab Member="Member" OrderStats="OrderStats" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" />
+                    @* <MemberDetailsTab Member="Member" OrderStats="OrderStats" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" /> *@
                 </TabPanel>
                 <TabPanel Name="Orders">
                     <MemberOrdersTab Member="Member" OrderStats="OrderStats"></MemberOrdersTab>
