#PK-229 Server error debugging

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -6,7 +6,7 @@
 @inherits PikachuComponentBase
 @inject IMemberAppService MemberAppService
 
-<Row>
+@* <Row>
     <Column ColumnSize="ColumnSize.Is4">
         @if (Member != null)
         {
@@ -83,3 +83,4 @@
         }
     </Column>
 </Row>
+ *@
