#PK-229 Server error debugging

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -12,25 +12,31 @@
         @L["Members"]
     </PikachuButton>
     <MemberDetailsHeader Member="Member" CanEditMember="CanEditMember"></MemberDetailsHeader>
-    @if (Member != null)
-    {
-        <Tabs RenderMode="TabsRenderMode.LazyLoad" SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged">
-            <Items>
-                <Tab Name="Details">@L["Details"]</Tab>
-                <Tab Name="Orders">@L["Orders"]</Tab>
-                <Tab Name="ShoppingCredits">@L["ShoppingCredits"]</Tab>
-            </Items>
-            <Content>
-                <TabPanel Name="Details">
+    <Tabs RenderMode="TabsRenderMode.LazyLoad" SelectedTab="@SelectedTab" SelectedTabChanged="@OnSelectedTabChanged">
+        <Items>
+            <Tab Name="Details">@L["Details"]</Tab>
+            <Tab Name="Orders">@L["Orders"]</Tab>
+            <Tab Name="ShoppingCredits">@L["ShoppingCredits"]</Tab>
+        </Items>
+        <Content>
+            <TabPanel Name="Details">
+                @if (Member != null && OrderStats != null)
+                {
                     <MemberDetailsTab Member="Member" OrderStats="OrderStats" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" />
-                </TabPanel>
-                <TabPanel Name="Orders">
+                }
+            </TabPanel>
+            <TabPanel Name="Orders">
+                @if (Member != null)
+                {
                     <MemberOrdersTab Member="Member" OrderStats="OrderStats"></MemberOrdersTab>
-                </TabPanel>
-                <TabPanel Name="ShoppingCredits">
+                }
+            </TabPanel>
+            <TabPanel Name="ShoppingCredits">
+                @if (Member != null)
+                {
                     <MemberShoppingCreditsTab Member="Member"></MemberShoppingCreditsTab>
-                </TabPanel>
-            </Content>
-        </Tabs>
-    }
+                }
+            </TabPanel>
+        </Content>
+    </Tabs>
 </Div>
