--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -20,7 +20,10 @@
         </Items>
         <Content>
             <TabPanel Name="Details">
-                
+                @if (Member != null && OrderStats != null)
+                {
+                    <MemberDetailsTab Member="Member" OrderStats="OrderStats" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" />
+                }
             </TabPanel>
             <TabPanel Name="Orders">
                 @if (Member != null)
