Commit For PK-183

--- a/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
@@ -164,3 +164,11 @@
         </Row>
     </CardBody>
 </Card>
+<Div Class="text-end">
+    <PikachuButton Class="pk-btn-light" Clicked="NavigateToAddOnProducts">
+        @L["Cancel"]
+    </PikachuButton>
+    <PikachuButton Class="pk-btn-primary">
+        @L["Create"]
+    </PikachuButton>
+</Div>
