--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/DiscountCode.razor
@@ -14,7 +14,7 @@
             <h3 class="text-dark">@L["DiscountCodes"]</h3>
         </Column>
         <Column ColumnSize="ColumnSize.Is6" TextAlignment="TextAlignment.End">
-            <Button  Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary">
+            <Button  Type="ButtonType.Button" Size="Size.Small" Color="Color.Primary" Clicked="CreateNewDiscountCode">
                 <Icon Name="IconName.Add"></Icon>
                 @L["New"]
             </Button>
