--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -128,6 +128,30 @@
                 </span>
             </div>
         </div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["Facebook"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@CreateGroupBuyDto.FacebookLink" />
+            </Div>
+        </Div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["Instagram"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@CreateGroupBuyDto.InstagramLink" />
+            </Div>
+        </Div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["LINE"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@CreateGroupBuyDto.LINELink" />
+            </Div>
+        </Div>
         <div class="row">
             <div class="col-2">
                 <label>
