--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -131,6 +131,30 @@
                 </span>
             </div>
         </div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["Facebook"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@EditGroupBuyDto.FacebookLink" />
+            </Div>
+        </Div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["Instagram"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@EditGroupBuyDto.InstagramLink" />
+            </Div>
+        </Div>
+        <Div Class="row">
+            <Div Class="col-2">
+                <label>@L["LINE"]</label>
+            </Div>
+            <Div Class="col-9">
+                <TextEdit @bind-Text="@EditGroupBuyDto.LINELink" />
+            </Div>
+        </Div>
         <div class="row">
             <div class="col-2">
                 <label>@L["GroupBuyLogo"]
