Commit For PK-188

--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
@@ -32,7 +32,7 @@
                 <h3 >@L["GetSettings"]</h3>
                     </Column>
                     <Column Class="text-end" ColumnSize="ColumnSize.Is6">
-                       <Button><Icon Name="IconName.Pen" IconSize="IconSize.Large"></Icon></Button>
+                            <Button Clicked="NavigateToGetSetting"><Icon Name="IconName.Pen" IconSize="IconSize.Large"></Icon></Button>
                     </Column>
                 </Row>
             </CardHeader>
