--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -57,13 +57,13 @@
                 <h4>@L["Payment"]</h4>
                 <Row Class="py-3" HorizontalGutter="10">
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="OrderStats?.PaidAmount" Count="OrderStats?.PaidCount"></PikachuCard>
+                        <PikachuCard Type="success" Title="@L["Paid"]" Amount="CumulativeFinancials?.TotalPaid"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="OrderStats?.UnpaidAmount" Count="OrderStats?.UnpaidCount"></PikachuCard>
+                        <PikachuCard Type="warning" Title="@L["Unpaid/Due"]" Amount="CumulativeFinancials?.TotalUnpaid"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="OrderStats?.RefundAmount" Count="OrderStats?.RefundCount"></PikachuCard>
+                        <PikachuCard Type="danger" Title="@L["Refunded"]" Amount="CumulativeFinancials?.TotalRefunded"></PikachuCard>
                     </Column>
                 </Row>
             </CardBody>
