--- a/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuCard.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuCard.razor
@@ -6,8 +6,15 @@
         <Div>
             <h5 class="m-0">@Title</h5>
             <h3 class="fw-bolder m-0">
-                $@((Amount ?? 0).ToString("N0"))
+                @if (AmountVisible)
+                {
+                    <Span>$@((Amount ?? 0).ToString("N0"))</Span>
+                }
                 @if (CountVisible)
+                {
+                    <Span>@((Count ?? 0).ToString("N0"))</Span>
+                }
+                @if (AmountVisible && CountVisible)
                 {
                     <Span>&nbsp;(@((Count ?? 0).ToString("N0")))</Span>
                 }
@@ -27,6 +34,9 @@
 
     [Parameter]
     public int? Count { get; set; }
+
+    [Parameter]
+    public bool AmountVisible { get; set; } = false;
 
     [Parameter]
     public bool CountVisible { get; set; } = false;
